--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -32,7 +32,7 @@
 	$palette: (
 		bg:					#242943,
 		bg-alt:				#2a2f4a,
-		fg:					#ffffff,
+		fg:					#000,
 		fg-bold:			#ffffff,
 		fg-light:			rgba(244,244,255,0.2),
 		border:				rgba(212,212,255,0.1),
