--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,7 @@
 ---
 ---
+
+{
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
@@ -78,3 +80,4 @@
 	@import 'layout/footer';
 	@import 'layout/wrapper';
 	@import 'layout/menu';
+}
