--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#87c5a4,
+		bg:					#242943,
 		bg-alt:				#2a2f4a,
 		fg:					#fff,
 		fg-bold:			#ffffff,
@@ -40,7 +40,7 @@
 		highlight:			#9bf1ff,
 		accent1:			#6fc3df,
 		accent2:			#8d82c4,
-		accent3:			#800f00,
+		accent3:			#ec8d81,
 		accent4:			#e7b788,
 		accent5:			#8ea9e8,
 		accent6:			#87c5a4
