update color test

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#e7d90a,
+		bg:					#9c930b,
 		bg-alt:				#2a2f4a,
 		fg:					#fff,
 		fg-bold:			#ffffff,
