--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#0b9c3b,
+		bg:					#910f45,
 		bg-alt:				#2a2f4a,
 		fg:					#fff,
 		fg-bold:			#ffffff,
